--- a/public/style.css
+++ b/public/style.css
@@ -211,9 +211,9 @@ ul {
     }
     li {
       margin: 10px 0;
-      text-alignment: left;
-    }
+        }
     a {
       text-decoration: none;
+      text-align: left;
       color: #007BFF;
     }
